--- a/apertura.html
+++ b/apertura.html
@@ -1,76 +1,85 @@
 <!DOCTYPE html>
 <html lang="es">
 
-	<head>
-		<meta charset="UTF-8">
-		<title>Los Soprano</title>
-		<base href="https://blluci.github.io/">
-		<meta name=application_name content="Los Soprano">
-		<meta name=author content="Lucía Blanco Llera">
-		<meta name=description content="Information about tv show Los Soprano">
-		<meta name=keywords content="Los Soprano, HBO, serie, David Chase, mafia, James Gandolfini, Edie Falco">
-		<meta name="viewport" content="width=device-width, user-scalable=1.0"/>
-		<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
-	</head>
-	
-	<body>
-		<header><h1>Los Soprano</h1></header>
-	
-		<main>
-				<h2>Secuecia de apertura</h2>
-				<p> 
-			Una parte reconocible de Los Soprano es la secuencia de apertura de la serie. Tony Soprano aparece 
-			saliendo del túnel Lincoln y entrando en la New Jersey Turnpike, la autopista de peaje de Nueva Jersey. 
-			Durante la secuencia se muestran numerosos monumentos históricos de Newark y Elizabeth y sus alrededores.
-			73​ La secuencia finaliza con Tony en el camino de entrada a su casa. Chase dijo que el objetivo de la 
-			secuencia de apertura era mostrar que esta mafia en particular era de Nueva Jersey, a diferencia de Nueva 
-			York, donde se ambientaban la mayoría de los dramas.
-				</p>
-				<p>
-			En las tres primeras temporadas, cuando Tony dejaba el túnel y entraba en la autopista de peaje, se mostraba 
-			una imagen de las torres del World Trade Center desde el espejo retrovisor del vehículo de Tony. Sin embargo, 
-			tras los atentados del 11 de septiembre de 2001, esta imagen fue eliminada, coincidiendo con el comienzo de 
-			la cuarta temporada de la serie.
-				</p>
-				<p>
-			En una de las ediciones de la revista TV Guide de 2010, la secuencia de apertura de Los Soprano fue catalogada 
-			como la décima secuencia de introducción favorita por los lectores de dicha revista.
-				</p>
-				<video width="320" height="240" controls><source src="multimedia/intro.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-			
-		</main>
-		
-		<aside>
-			<nav>
-				<p>OTROS APARTADOS:</p> 
-				<ul>
-					<li><a href="index.html">Introducción</a></li>
-					<li><a href="argumento.html">Argumento</a></li>
-					<li><a href="concepcion.html">Concepcion</a></li>
-					<li><a href="localizaciones.html">Localizaciones</a></li>
-					<li><a href="personajes_principales.html">Personajes</a></li>
-					<li><a href="temporadas.html">Temporadas</a></li>
-					<li><a href="premios.html">Premios</a></li>
-					<li><a href="libros.html">Libros</a></li>
-				</ul>
-			</nav>
-		</aside>
-		
-		<footer>
-			<address>
-				<p>
-			Más información:
-				</p>
-				<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
-				<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
-				<a href="https://validator.w3.org/check?uri=referer">
-				<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png"
-				alt=" HTML5 Válido!" height="64" width="63" /></a>
-				<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
-				<img src=" http://jigsaw.w3.org/css-validator/images/vcss"
-				alt="Valid CSS!" height="31" width="88" /></a>
-			</address>
-		</footer>
-		
-	</body>
+<head>
+	<meta charset="utf-8" />
+	<base href="https://uo258935.github.io/lucia/">
+	<meta name="description" content="Información sobre la serie Los Soprano">
+	<meta name="keywords" content="Los Soprano,tv,hbo,series">
+	<title>Los Soprano</title>
+	<meta name="autor" content="Marcos Matilla">
+	<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+	<header>
+		<h1>Los Soprano</h1>
+	</header>
+	<aside>
+		<nav>
+			<p>OTROS APARTADOS:</p>
+			<ul>
+				<li><a title="Introducción" href="index.html">Introducción</a></li>
+				<li><a title="Argumento" href="argumento.html">Argumento</a></li>
+				<li><a title="Conception" href="concepcion.html">Concepcion</a></li>
+				<li><a title="Apertura" href="apertura.html">Apertura</a></li>
+				<li><a title="Localizaciones" href="localizaciones.html">Localizaciones</a></li>
+				<li><a title="Personajes" href="personajes_principales.html">Personajes</a></li>
+				<li><a title="Premios" href="premios.html">Premios</a></li>
+				<li><a title="Libros" href="libros.html">Libros</a></li>
+				<li><a title="Temporadas" href="temporadas.html">Temporadas</a></li>
+			</ul>
+		</nav>
+	</aside>
+	<main>
+		<section>
+			<h2>Secuecia de apertura</h2>
+			<p>
+				Una parte reconocible de Los Soprano es la secuencia de apertura de la serie. Tony Soprano aparece
+				saliendo del túnel Lincoln y entrando en la New Jersey Turnpike, la autopista de peaje de Nueva Jersey.
+				Durante la secuencia se muestran numerosos monumentos históricos de Newark y Elizabeth y sus
+				alrededores.
+				73​ La secuencia finaliza con Tony en el camino de entrada a su casa. Chase dijo que el objetivo de la
+				secuencia de apertura era mostrar que esta mafia en particular era de Nueva Jersey, a diferencia de
+				Nueva
+				York, donde se ambientaban la mayoría de los dramas.
+			</p>
+			<p>
+				En las tres primeras temporadas, cuando Tony dejaba el túnel y entraba en la autopista de peaje, se
+				mostraba
+				una imagen de las torres del World Trade Center desde el espejo retrovisor del vehículo de Tony. Sin
+				embargo,
+				tras los atentados del 11 de septiembre de 2001, esta imagen fue eliminada, coincidiendo con el comienzo
+				de
+				la cuarta temporada de la serie.
+			</p>
+			<p>
+				En una de las ediciones de la revista TV Guide de 2010, la secuencia de apertura de Los Soprano fue
+				catalogada
+				como la décima secuencia de introducción favorita por los lectores de dicha revista.
+			</p>
+			<video width="320" height="240" controls>
+				<source src="multimedia/intro.mp4" type="video/mp4">Your browser does not support the video tag.</video>
+		</section>
+	</main>
+
+	<footer>
+		<address>
+			<p>
+				Más información:
+			</p>
+			<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
+			<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
+
+		</address>
+		<a href="https://validator.w3.org/check?uri=referer">
+			<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt=" HTML5 Válido!" height="64"
+				width="63" /></a>
+		<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
+			<img src=" http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88" /></a>
+	</footer>
+
+</body>
+
 </html>
