--- a/argumento.html
+++ b/argumento.html
@@ -1,85 +1,101 @@
 <!DOCTYPE html>
 <html lang="es">
 
-	<head>
-		<meta charset="UTF-8">
-		<title>Los Soprano</title>
-		<base href="https://blluci.github.io/">
-		<meta name=application_name content="Los Soprano">
-		<meta name=author content="Lucía Blanco Llera">
-		<meta name=description content="Information about tv show Los Soprano">
-		<meta name=keywords content="Los Soprano, HBO, serie, David Chase, mafia, James Gandolfini, Edie Falco">
-		<meta name="viewport" content="width=device-width, user-scalable=1.0"/>
-		<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
-	</head>
-	
-	<body>
-		<header><h1>Los Soprano</h1></header>
-		
-		<main>
+<head>
+	<meta charset="utf-8" />
+	<base href="https://uo258935.github.io/lucia/">
+	<meta name="description" content="Información sobre la serie Los Soprano">
+	<meta name="keywords" content="Los Soprano,tv,hbo,series">
+	<title>Los Soprano</title>
+	<meta name="autor" content="Lucia Blanco Llera">
+	<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+
+<body>
+	<header>
+		<h1>Los Soprano</h1>
+	</header>
+	<aside>
+		<nav>
+			<p>Otros apartados:</p>
+			<ul>
+				<li><a title="Introducción" href="index.html">Introducción</a></li>
+				<li><a title="Argumento" href="argumento.html">Argumento</a></li>
+				<li><a title="Conception" href="concepcion.html">Concepcion</a></li>
+				<li><a title="Apertura" href="apertura.html">Apertura</a></li>
+				<li><a title="Localizaciones" href="localizaciones.html">Localizaciones</a></li>
+				<li><a title="Personajes" href="personajes_principales.html">Personajes</a></li>
+				<li><a title="Premios" href="premios.html">Premios</a></li>
+				<li><a title="Libros" href="libros.html">Libros</a></li>
+				<li><a title="Temporadas" href="temporadas.html">Temporadas</a></li>
+			</ul>
+		</nav>
+	</aside>
+	<main>
+		<section>
 			<h2>Argumento</h2>
 			<p>
-		Tony Soprano, italo-americano de Nueva Jersey, está estresado e insatisfecho, atravesando una crisis de 
-		la mediana edad.
+				Tony Soprano, italo-americano de Nueva Jersey, está estresado e insatisfecho, atravesando una crisis de
+				la mediana edad.
 			</p>
 			<p>
-		El personaje de Tony Soprano se construye desde la revisión de los modelos fundacionales de la historia 
-		del cine de gánsteres que están presentes desde la cita directa o indirecta, imitaciones, chistes, y 
-		toda clase de referencias (la imitación constante de Michael Corleone que realiza el personaje de Silvio, 
-		las charlas sobre El padrino, la proyección de El enemigo público, etc.). Son héroes de ascenso y caída 
-		trágica, héroes clásicos de los cuales Tony es un reflejo distorsionado y disgregado. Su imposibilidad de 
-		mantener a sus dos familias en armonía y según los códigos de la tradición lo piden lo son la causa de los 
-		ataques de pánico que lo llevarán al psicoanálisis. La presencia de una madre castradora y autoritaria que 
-		conspira contra su propio hijo, su tío que es su principal rival en los negocios y también conspira contra 
-		él junto con su madre, los conflictos generacionales con sus hijos y los problemas de comunicación con su 
-		esposa son algunos de los ejes de su terapia y de la serie. Y por el lado de la familia mafiosa, la lucha 
-		por el poder como consecuencia de la muerte por cáncer del jefe, Jackie Aprile, y más adelante los problemas 
-		con las familias de Brooklyn. A diferencia de la mayoría de las historias de mafiosos, Los Soprano no 
-		transcurre en Nueva York o Chicago sino en Nueva Jersey, cuya geografía se nos invita a recorrer con los 
-		títulos iniciales de cada capítulo. Frente a los grandes negocios mafiosos aparece el del reciclaje de basuras. 
-		
-		Otro de los grandes temas que recorre la espina de la serie es la esencia y los conflictos del italo-americano 
-		en Estados Unidos, como otra forma de problematizar el tema de la identidad (tanto individual como grupal, 
-		y en las dos familias).
+				El personaje de Tony Soprano se construye desde la revisión de los modelos fundacionales de la historia
+				del cine de gánsteres que están presentes desde la cita directa o indirecta, imitaciones, chistes, y
+				toda clase de referencias (la imitación constante de Michael Corleone que realiza el personaje de
+				Silvio,
+				las charlas sobre El padrino, la proyección de El enemigo público, etc.). Son héroes de ascenso y caída
+				trágica, héroes clásicos de los cuales Tony es un reflejo distorsionado y disgregado. Su imposibilidad
+				de
+				mantener a sus dos familias en armonía y según los códigos de la tradición lo piden lo son la causa de
+				los
+				ataques de pánico que lo llevarán al psicoanálisis. La presencia de una madre castradora y autoritaria
+				que
+				conspira contra su propio hijo, su tío que es su principal rival en los negocios y también conspira
+				contra
+				él junto con su madre, los conflictos generacionales con sus hijos y los problemas de comunicación con
+				su
+				esposa son algunos de los ejes de su terapia y de la serie. Y por el lado de la familia mafiosa, la
+				lucha
+				por el poder como consecuencia de la muerte por cáncer del jefe, Jackie Aprile, y más adelante los
+				problemas
+				con las familias de Brooklyn. A diferencia de la mayoría de las historias de mafiosos, Los Soprano no
+				transcurre en Nueva York o Chicago sino en Nueva Jersey, cuya geografía se nos invita a recorrer con los
+				títulos iniciales de cada capítulo. Frente a los grandes negocios mafiosos aparece el del reciclaje de
+				basuras.
+
+				Otro de los grandes temas que recorre la espina de la serie es la esencia y los conflictos del
+				italo-americano
+				en Estados Unidos, como otra forma de problematizar el tema de la identidad (tanto individual como
+				grupal,
+				y en las dos familias).
 			</p>
 			<p>
-		A partir de estas bases, el autor David Chase estudia con precisión de cirujano la condición humana y los 
-		conflictos morales y existenciales de nuestra época, poniendo en primer plano al hombre solo haciendo frente
-		al mundo y al paso del tiempo.
+				A partir de estas bases, el autor David Chase estudia con precisión de cirujano la condición humana y
+				los
+				conflictos morales y existenciales de nuestra época, poniendo en primer plano al hombre solo haciendo
+				frente
+				al mundo y al paso del tiempo.
 			</p>
-		</main>
-		
-		<aside>
-			<nav>
-				<p>Otros apartados:</p>
-				<ul>
-					<li><a href="index.html">Introducción</a></li>
-					<li><a href="concepcion.html">Concepcion</a></li>
-					<li><a href="apertura.html">Apertura</a></li>
-					<li><a href="localizaciones.html">Localizaciones</a></li>
-					<li><a href="personajes_principales.html">Personajes</a></li>
-					<li><a href="temporadas.html">Temporadas</a></li>
-					<li><a href="premios.html">Premios</a></li>
-					<li><a href="libros.html">Libros</a></li>
-				</ul>
-			</nav>
-		</aside>
-		
-		<footer>
-			<address>
-				<p>
-			Más información:
-				</p>
-				<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
-				<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
-				<a href="https://validator.w3.org/check?uri=referer">
-				<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png"
-				alt=" HTML5 Válido!" height="64" width="63" /></a>
-				<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
-				<img src=" http://jigsaw.w3.org/css-validator/images/vcss"
-				alt="Valid CSS!" height="31" width="88" /></a>
-			</address>
-		</footer>
-		
-	</body>
+		</section>
+	</main>
+	<footer>
+		<address>
+			<p>
+				Más información:
+			</p>
+			<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
+			<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
+
+		</address>
+		<a href="https://validator.w3.org/check?uri=referer">
+			<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt=" HTML5 Válido!" height="64"
+				width="63" /></a>
+		<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
+			<img src=" http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88" /></a>
+	</footer>
+
+</body>
+
 </html>
