--- a/libros.html
+++ b/libros.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
 
-	<head>
-		<meta charset="UTF-8">
-		<title>Los Soprano</title>
-		<base href="https://blluci.github.io/">
-		<meta name=application_name content="Los Soprano">
-		<meta name=author content="Lucía Blanco Llera">
-		<meta name=description content="Information about tv show Los Soprano">
-		<meta name=keywords content="Los Soprano, HBO, serie, David Chase, mafia, James Gandolfini, Edie Falco">
-		<meta name="viewport" content="width=device-width, user-scalable=1.0"/>
-		<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
-	</head>
-	
-	<body>
-	<header><h1>Los Soprano</h1></header>		
-		<main>
+<head>
+	<meta charset="utf-8" />
+	<base href="https://uo258935.github.io/lucia/">
+	<meta name="description" content="Información sobre la serie Los Soprano">
+	<meta name="keywords" content="Los Soprano,tv,hbo,series">
+	<title>Los Soprano</title>
+	<meta name="autor" content="Marcos Matilla">
+	<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+
+<body>
+	<header>
+		<h1>Los Soprano</h1>
+	</header>
+	<aside>
+		<nav>
+			<p>Otros apartados:</p>
+			<ul>
+				<li><a title="Introducción" href="index.html">Introducción</a></li>
+				<li><a title="Argumento" href="argumento.html">Argumento</a></li>
+				<li><a title="Conception" href="concepcion.html">Concepcion</a></li>
+				<li><a title="Apertura" href="apertura.html">Apertura</a></li>
+				<li><a title="Localizaciones" href="localizaciones.html">Localizaciones</a></li>
+				<li><a title="Personajes" href="personajes_principales.html">Personajes</a></li>
+				<li><a title="Premios" href="premios.html">Premios</a></li>
+				<li><a title="Libros" href="libros.html">Libros</a></li>
+				<li><a title="Temporadas" href="temporadas.html">Temporadas</a></li>
+			</ul>
+		</nav>
+	</aside>
+	<main>
+		<section>
 			<h2>Libros</h2>
 			<p>
-		Existen varios libros sobre diferentes aspectos de la serie. En España sólo se ha publicado un libro 
-		original, Los Soprano Forever, y la traducción del libro The Sopranos and Philosophy.
+				Existen varios libros sobre diferentes aspectos de la serie. En España sólo se ha publicado un libro
+				original, Los Soprano Forever, y la traducción del libro The Sopranos and Philosophy.
 			</p>
 			<h3>Libros en español.</h3>
 			<ul>
@@ -36,39 +55,25 @@
 				<li>The Sopranos on the Couch: The Ultimate Guide</li>
 				<li>Tony Soprano on Management: Leadership Lessons</li>
 			</ul>
-		</main>
-	
-		<aside>
-			<nav>
-				<p>Otros apartados:</p>
-				<ul>
-					<li><a href="index.html">Introducción</a></li>
-					<li><a href="argumento.html">Argumento</a></li>
-					<li><a href="concepcion.html">Concepcion</a></li>
-					<li><a href="apertura.html">Apertura</a></li>
-					<li><a href="localizaciones.html">Localizaciones</a></li>
-					<li><a href="personajes_principales.html">Personajes</a></li>
-					<li><a href="premios.html">Premios</a></li>
-				</ul>
-			</nav>
-		</aside>
-		
-		
-		<footer>
-			<address>
-				<p>
-			Más información:
-				</p>
-				<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
-				<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
-				<a href="https://validator.w3.org/check?uri=referer">
-				<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png"
-				alt=" HTML5 Válido!" height="64" width="63" /></a>
-				<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
-				<img src=" http://jigsaw.w3.org/css-validator/images/vcss"
-				alt="Valid CSS!" height="31" width="88" /></a>
-			</address>
-		</footer>
-		
-	</body>
+		</section>
+	</main>
+
+	<footer>
+		<address>
+			<p>
+				Más información:
+			</p>
+			<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
+			<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
+
+		</address>
+		<a href="https://validator.w3.org/check?uri=referer">
+			<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt=" HTML5 Válido!" height="64"
+				width="63" /></a>
+		<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
+			<img src=" http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88" /></a>
+	</footer>
+
+</body>
+
 </html>
