--- a/personajes_secundarios.html
+++ b/personajes_secundarios.html
@@ -1,84 +1,108 @@
 <!DOCTYPE html>
 <html lang="es">
 
-	<head>
-		<meta charset="UTF-8">
-		<title>Los Soprano</title>
-		<base href="https://blluci.github.io/">
-		<meta name=application_name content="Los Soprano">
-		<meta name=author content="Lucía Blanco Llera">
-		<meta name=description content="Information about tv show Los Soprano">
-		<meta name=keywords content="Los Soprano, HBO, serie, David Chase, mafia, James Gandolfini, Edie Falco">
-		<meta name="viewport" content="width=device-width, user-scalable=1.0"/>
-		<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
-	</head>
-	
-	<body>
-		<header><h1>Los Soprano</h1></header>
-		
-		<main>
-			<h2>Personajes Secundarios y Reparto</h2>
-			
-			<nav><p>Anexo:<a href=personajes_principales.html>Personajes Principales</a></p></nav>
-			<p>
-		Otros personajes de importancia en la familia DiMeo son Bobby "Bacala" Baccalieri (Steven R. Schirripa), Richie Aprile (David Proval), Ralph 
-		Cifaretto (Joe Pantoliano), Eugene Pontecorvo (Robert Funaro) y Vito Spatafore (Joseph R. Gannascoli). Bobby es un subordinado de Junior al 
-		que Tony intimidaba al principio, pero más tarde aceptaría en su círculo. Ralph es listo, ambicioso y una importante fuente de ingresos para 
-		la familia, pero su arrogancia y tendencia a ser desagradable, irrespetuoso y violento no gusta en los altos cargos de la organización. Richie 
-		Aprile abandona la cárcel en la segunda temporada y rápidamente crea problemas en la organización. Pontecorvo es un soldado que se convierte 
-		en iniciado junto con Christopher. Spatafore es un exitoso trabajador que alcanzó las cotas más altas del equipo de Aprile, pero tiene un 
-		secreto personal que es un tabú en la organización.
-			</p>
-			<p>
-		Entre los amigos de la familia Soprano se incluyen Herman "Hesh" Rabkin (Jerry Adler), Adriana La Cerva (Drea de Matteo), Rosalie Aprile (Sharon 
-		Angela), Angie Bonpensiero (Toni Kalem), Artie Bucco (John Ventimiglia) y Charmaine Bucco (Kathrine Narducci). Hesh es consejero y amigo de 
-		confianza de Tony, pues ocupó la misma función con su padre. Adriana es la novia de Chris durante un largo tiempo; Rosalie es la viuda del 
-		anterior jefe de la familia, Jackie Aprile, e íntima amiga de Carmela; Angie es la esposa de Pussy Bonpensiero; y Artie y Charmaine son amigos de 
-		los Soprano desde la escuela y dueños del restaurante Vesubio. Charmaine no está de acuerdo con la idea de asociarse mucho con Tony y su círculo 
-		criminal, por lo que pide constantemente a su marido Artie —un hombre respetuoso con la ley y trabajador— que no deje entrar en el restaurante a 
-		ese tipo de clientes.
-			</p>
-			<p>
-		Carmine Lupertazzi (Tony Lip), John "Johnny Sack" Sacramoni (Vince Curatola), Phil Leotardo (Frank Vincent) y "Little" Carmine Lupertazzi (Ray 
-		Abruzzo) son miembros importantes de la familia criminal Lupertazzi de Nueva York y tienen muchos intereses comerciales con la familia Soprano. 
-		Aunque los intereses de ambas familias son a menudo un conflicto, Tony mantiene una cordial y amistosa relación con Johnny Sack, prefiriendo llegar 
-		a acuerdos que benefician a ambas familias. Su segundo al mando, y posterior sucesor, es Phil Leotardo, una persona menos agradable y de más 
-		dificultad para hacer negocios con Tony. Little Carmine es el hijo del primer jefe de la familia y compite por el poder con los demás.
-			</p>
-		</main>
-	
-		<aside>
-			<nav>
-				<p>Otros apartados:</p>
-				<ul>
-					<li><a href="index.html">Introducción</a></li>
-					<li><a href="argumento.html">Argumento</a></li>
-					<li><a href="concepcion.html">Concepcion</a></li>
-					<li><a href="apertura.html">Apertura</a></li>
-					<li><a href="localizaciones.html">Localizaciones</a></li>
-					<li><a href="temporadas.html">Temporadas</a></li>
-					<li><a href="premios.html">Premios</a></li>
-					<li><a href="libros.html">Libros</a></li>
-				</ul>
-			</nav>
-		</aside>
+<head>
+	<meta charset="utf-8" />
+	<base href="https://uo258935.github.io/lucia/">
+	<meta name="description" content="Información sobre la serie Los Soprano">
+	<meta name="keywords" content="Los Soprano,tv,hbo,series">
+	<title>Los Soprano</title>
+	<meta name="autor" content="Marcos Matilla">
+	<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
-		
-		<footer>
-			<address>
-				<p>
-			Más información:
-				</p>
-				<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
-				<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
-				<a href="https://validator.w3.org/check?uri=referer">
-				<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png"
-				alt=" HTML5 Válido!" height="64" width="63" /></a>
-				<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
-				<img src=" http://jigsaw.w3.org/css-validator/images/vcss"
-				alt="Valid CSS!" height="31" width="88" /></a>
-			</address>
-		</footer>
-		
-	</body>
+<body>
+	<header>
+		<h1>Los Soprano</h1>
+	</header>
+	<aside>
+		<nav>
+			<p>Otros apartados:</p>
+			<ul>
+				<li><a title="Introducción" href="index.html">Introducción</a></li>
+				<li><a title="Argumento" href="argumento.html">Argumento</a></li>
+				<li><a title="Conception" href="concepcion.html">Concepcion</a></li>
+				<li><a title="Apertura" href="apertura.html">Apertura</a></li>
+				<li><a title="Localizaciones" href="localizaciones.html">Localizaciones</a></li>
+				<li><a title="Personajes" href="personajes_principales.html">Personajes</a></li>
+				<li><a title="Premios" href="premios.html">Premios</a></li>
+				<li><a title="Libros" href="libros.html">Libros</a></li>
+				<li><a title="Temporadas" href="temporadas.html">Temporadas</a></li>
+			</ul>
+		</nav>
+	</aside>
+	<main>
+		<section>
+			<h2>Personajes Secundarios y Reparto</h2>
+
+			<nav>
+				<p>Anexo:<a href=personajes_principales.html>Personajes Principales</a></p>
+			</nav>
+			<p>
+				Otros personajes de importancia en la familia DiMeo son Bobby "Bacala" Baccalieri (Steven R. Schirripa),
+				Richie Aprile (David Proval), Ralph
+				Cifaretto (Joe Pantoliano), Eugene Pontecorvo (Robert Funaro) y Vito Spatafore (Joseph R. Gannascoli).
+				Bobby es un subordinado de Junior al
+				que Tony intimidaba al principio, pero más tarde aceptaría en su círculo. Ralph es listo, ambicioso y
+				una importante fuente de ingresos para
+				la familia, pero su arrogancia y tendencia a ser desagradable, irrespetuoso y violento no gusta en los
+				altos cargos de la organización. Richie
+				Aprile abandona la cárcel en la segunda temporada y rápidamente crea problemas en la organización.
+				Pontecorvo es un soldado que se convierte
+				en iniciado junto con Christopher. Spatafore es un exitoso trabajador que alcanzó las cotas más altas
+				del equipo de Aprile, pero tiene un
+				secreto personal que es un tabú en la organización.
+			</p>
+			<p>
+				Entre los amigos de la familia Soprano se incluyen Herman "Hesh" Rabkin (Jerry Adler), Adriana La Cerva
+				(Drea de Matteo), Rosalie Aprile (Sharon
+				Angela), Angie Bonpensiero (Toni Kalem), Artie Bucco (John Ventimiglia) y Charmaine Bucco (Kathrine
+				Narducci). Hesh es consejero y amigo de
+				confianza de Tony, pues ocupó la misma función con su padre. Adriana es la novia de Chris durante un
+				largo tiempo; Rosalie es la viuda del
+				anterior jefe de la familia, Jackie Aprile, e íntima amiga de Carmela; Angie es la esposa de Pussy
+				Bonpensiero; y Artie y Charmaine son amigos de
+				los Soprano desde la escuela y dueños del restaurante Vesubio. Charmaine no está de acuerdo con la idea
+				de asociarse mucho con Tony y su círculo
+				criminal, por lo que pide constantemente a su marido Artie —un hombre respetuoso con la ley y
+				trabajador— que no deje entrar en el restaurante a
+				ese tipo de clientes.
+			</p>
+			<p>
+				Carmine Lupertazzi (Tony Lip), John "Johnny Sack" Sacramoni (Vince Curatola), Phil Leotardo (Frank
+				Vincent) y "Little" Carmine Lupertazzi (Ray
+				Abruzzo) son miembros importantes de la familia criminal Lupertazzi de Nueva York y tienen muchos
+				intereses comerciales con la familia Soprano.
+				Aunque los intereses de ambas familias son a menudo un conflicto, Tony mantiene una cordial y amistosa
+				relación con Johnny Sack, prefiriendo llegar
+				a acuerdos que benefician a ambas familias. Su segundo al mando, y posterior sucesor, es Phil Leotardo,
+				una persona menos agradable y de más
+				dificultad para hacer negocios con Tony. Little Carmine es el hijo del primer jefe de la familia y
+				compite por el poder con los demás.
+			</p>
+		</section>
+	</main>
+
+
+
+
+	<footer>
+		<address>
+			<p>
+				Más información:
+			</p>
+			<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
+			<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
+
+		</address>
+		<a href="https://validator.w3.org/check?uri=referer">
+			<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt=" HTML5 Válido!" height="64"
+				width="63" /></a>
+		<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
+			<img src=" http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88" /></a>
+	</footer>
+
+</body>
+
 </html>
