--- a/premios.html
+++ b/premios.html
@@ -1,77 +1,99 @@
 <!DOCTYPE html>
 <html lang="es">
 
-	<head>
-		<meta charset="UTF-8">
-		<title>Los Soprano</title>
-		<base href="https://blluci.github.io/">
-		<meta name=application_name content="Los Soprano">
-		<meta name=author content="Lucía Blanco Llera">
-		<meta name=description content="Information about tv show Los Soprano">
-		<meta name=keywords content="Los Soprano, HBO, serie, David Chase, mafia, James Gandolfini, Edie Falco">
-		<meta name="viewport" content="width=device-width, user-scalable=1.0"/>
-		<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
-	</head>
-	
-	<body>
-		<header><h1>Los Soprano</h1></header>
+<head>
+	<meta charset="utf-8" />
+	<base href="https://uo258935.github.io/lucia/">
+	<meta name="description" content="Información sobre la serie Los Soprano">
+	<meta name="keywords" content="Los Soprano,tv,hbo,series">
+	<title>Los Soprano</title>
+	<meta name="autor" content="Marcos Matilla">
+	<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<main>
+</head>
+
+<body>
+	<header>
+		<h1>Los Soprano</h1>
+	</header>
+	<aside>
+		<nav>
+			<p>Otros apartados:</p>
+			<ul>
+				<li><a title="Introducción" href="index.html">Introducción</a></li>
+				<li><a title="Argumento" href="argumento.html">Argumento</a></li>
+				<li><a title="Conception" href="concepcion.html">Concepcion</a></li>
+				<li><a title="Apertura" href="apertura.html">Apertura</a></li>
+				<li><a title="Localizaciones" href="localizaciones.html">Localizaciones</a></li>
+				<li><a title="Personajes" href="personajes_principales.html">Personajes</a></li>
+				<li><a title="Premios" href="premios.html">Premios</a></li>
+				<li><a title="Libros" href="libros.html">Libros</a></li>
+				<li><a title="Temporadas" href="temporadas.html">Temporadas</a></li>
+			</ul>
+		</nav>
+	</aside>
+	<main>
+
+		<section>
 			<h2>Premios</h2>
 			<p>
-		Los Soprano ganó y fue nominado a varios premios durante el tiempo que estuvo en emisión. La serie fue nominada al Primetime Emmy a la mejor serie
-		dramática en todos los años en los que fue elegible. Tras se nominada y perder el premio en 1999, 2000, 2001 y 2003 (la primera vez perdió ante The
-		Practice, y las tres siguientes ocasiones el galardón se lo llevó The West Wing), Los Soprano se hicieron con el premio en 2004 y 2007. Su premio 
-		de 2004 significó la primera serie de televisión por cable que ganaba un premio, mientras que en 2007 fue la primera serie que ganó el premio, tras 
-		Upstairs, Downstairs en 1977, después de que la serie haya finalizado. En total recibió 21 nominaciones de los premios Primetime Emmy al mejor guion 
-		en una serie dramática, de los cuales ganó en seis ocasiones y David Chase, el creador, recibió tres premios.
+				Los Soprano ganó y fue nominado a varios premios durante el tiempo que estuvo en emisión. La serie fue
+				nominada al Primetime Emmy a la mejor serie
+				dramática en todos los años en los que fue elegible. Tras se nominada y perder el premio en 1999, 2000,
+				2001 y 2003 (la primera vez perdió ante The
+				Practice, y las tres siguientes ocasiones el galardón se lo llevó The West Wing), Los Soprano se
+				hicieron con el premio en 2004 y 2007. Su premio
+				de 2004 significó la primera serie de televisión por cable que ganaba un premio, mientras que en 2007
+				fue la primera serie que ganó el premio, tras
+				Upstairs, Downstairs en 1977, después de que la serie haya finalizado. En total recibió 21 nominaciones
+				de los premios Primetime Emmy al mejor guion
+				en una serie dramática, de los cuales ganó en seis ocasiones y David Chase, el creador, recibió tres
+				premios.
 			</p>
 			<p>
-		La serie ganó, al menos, un premio por actuación en cada año que fue posible su nominación, excepto en 2006 y 2007. James Gandolfini y Edie Falco 
-		fueron nominados seis veces cada uno al mejor actor y mejor actriz en una en un serie dramática, respectivamente, ganando un total de tres premios. 
-		Joe Pantoliano ganó un premio al mejor actor de reparto en 2003, mientras que Michael Imperioli y Drea de Matteo hicieron lo propio en 2004 en la misma 
-		categoría. Otros actores que recibieron nominaciones a los Emmy fueron Lorraine Bracco (en las categorías de mejor actriz y mejor actriz de reparto), 
-		Dominic Chianese, Nancy Marchand, Aida Turturro, Steve Buscemi (quien fue nominado a la mejor dirección por "Pine Barrens"), Tim Daly, John Heard y 
-		Annabella Sciorra.
+				La serie ganó, al menos, un premio por actuación en cada año que fue posible su nominación, excepto en
+				2006 y 2007. James Gandolfini y Edie Falco
+				fueron nominados seis veces cada uno al mejor actor y mejor actriz en una en un serie dramática,
+				respectivamente, ganando un total de tres premios.
+				Joe Pantoliano ganó un premio al mejor actor de reparto en 2003, mientras que Michael Imperioli y Drea
+				de Matteo hicieron lo propio en 2004 en la misma
+				categoría. Otros actores que recibieron nominaciones a los Emmy fueron Lorraine Bracco (en las
+				categorías de mejor actriz y mejor actriz de reparto),
+				Dominic Chianese, Nancy Marchand, Aida Turturro, Steve Buscemi (quien fue nominado a la mejor dirección
+				por "Pine Barrens"), Tim Daly, John Heard y
+				Annabella Sciorra.
 			</p>
 			<p>
-		En 2000 y 2001, Los Soprano ganaron dos premios George Foster Peabody consecutivos. Sólo dos series lo habían hecho anteriormente: Doctor en Alaska y 
-		The West Wing. La serie recibió, también, varias nominaciones a los premios Globo de Oro (ganó el galardón de mejor serie dramática en 2000) y los 
-		principales premios de los sindicatos (directores, productores, guionistas y actores).
+				En 2000 y 2001, Los Soprano ganaron dos premios George Foster Peabody consecutivos. Sólo dos series lo
+				habían hecho anteriormente: Doctor en Alaska y
+				The West Wing. La serie recibió, también, varias nominaciones a los premios Globo de Oro (ganó el
+				galardón de mejor serie dramática en 2000) y los
+				principales premios de los sindicatos (directores, productores, guionistas y actores).
 			</p>
-			<video width="320" height="240" controls><source src="multimedia/premio.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-		</main>
-	
-		<aside>
-			<nav>
-				<p>Otros apartados:</p>
-				<ul>
-					<li><a href="index.html">Introducción</a></li>
-					<li><a href="argumento.html">Argumento</a></li>
-					<li><a href="concepcion.html">Concepcion</a></li>
-					<li><a href="apertura.html">Apertura</a></li>
-					<li><a href="localizaciones.html">Localizaciones</a></li>
-					<li><a href="personajes_principales.html">Personajes</a></li>
-					<li><a href="temporadas.html">Temporadas</a></li>
-					<li><a href="libros.html">Libros</a></li>
-				</ul>
-			</nav>
-		</aside>
-		
-		<footer>
-			<address>
-				<p>
-			Más información:
-				</p>
-				<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
-				<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
-				<a href="https://validator.w3.org/check?uri=referer">
-				<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png"
-				alt=" HTML5 Válido!" height="64" width="63" /></a>
-				<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
-				<img src=" http://jigsaw.w3.org/css-validator/images/vcss"
-				alt="Valid CSS!" height="31" width="88" /></a>
-			</address>
-		</footer>
-	</body>
+			<video width="320" height="240" controls>
+				<source src="multimedia/premio.mp4" type="video/mp4">Your browser does not support the video
+				tag.</video>
+		</section>
+	</main>
+
+
+
+	<footer>
+		<address>
+			<p>
+				Más información:
+			</p>
+			<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
+			<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
+
+		</address>
+		<a href="https://validator.w3.org/check?uri=referer">
+			<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt=" HTML5 Válido!" height="64"
+				width="63" /></a>
+		<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
+			<img src=" http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88" /></a>
+	</footer>
+</body>
+
 </html>
