--- a/temporadas.html
+++ b/temporadas.html
@@ -1,37 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
 
-	<head>
-		<meta charset="UTF-8">
-		<title>Los Soprano</title>
-		<base href="https://blluci.github.io/">
-		<meta name=application_name content="Los Soprano">
-		<meta name=author content="Lucía Blanco Llera">
-		<meta name=description content="Information about tv show Los Soprano">
-		<meta name=keywords content="Los Soprano, HBO, serie, David Chase, mafia, James Gandolfini, Edie Falco">
-		<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
-	
-	<body>
-		<header><h1>Los Soprano</h1></header>
+<head>
+	<meta charset="utf-8" />
+	<base href="https://uo258935.github.io/lucia/">
+	<meta name="description" content="Información sobre la serie Los Soprano">
+	<meta name="keywords" content="Los Soprano,tv,hbo,series">
+	<title>Los Soprano</title>
+	<meta name="autor" content="Marcos Matilla">
+	<link rel="stylesheet" type="text/css" href="styles/my_first_style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		
-		<main>
+</head>
+
+<body>
+	<header>
+		<h1>Los Soprano</h1>
+	</header>
+	<aside>
+		<nav>
+			<p>Otros apartados:</p>
+			<ul>
+				<li><a title="Introducción" href="index.html">Introducción</a></li>
+				<li><a title="Argumento" href="argumento.html">Argumento</a></li>
+				<li><a title="Conception" href="concepcion.html">Concepcion</a></li>
+				<li><a title="Apertura" href="apertura.html">Apertura</a></li>
+				<li><a title="Localizaciones" href="localizaciones.html">Localizaciones</a></li>
+				<li><a title="Personajes" href="personajes_principales.html">Personajes</a></li>
+				<li><a title="Premios" href="premios.html">Premios</a></li>
+				<li><a title="Libros" href="libros.html">Libros</a></li>
+				<li><a title="Temporadas" href="temporadas.html">Temporadas</a></li>
+			</ul>
+		</nav>
+	</aside>
+	<main>
+		<section>
 			<h2>Temporadas</h2>
 			<p>
-		Los soprano consta de 6 temporadas, que fueron emitidas entre el 10 de Enero de 1999 y el 10 de Junio de 2007.
+				Los soprano consta de 6 temporadas, que fueron emitidas entre el 10 de Enero de 1999 y el 10 de Junio de
+				2007.
 			</p>
 			<table>
 				<tr>
-					<th colspan=2>  .</th>
-					<th colspan=2>  Emisión original</th>
+					<th colspan=2> .</th>
+					<th colspan=2> Emisión original</th>
 				</tr>
 				<tr>
-					<td> Temporada</td>
-					<td> Episodios</td>
-					<td> Primera emisión</td>
-					<td> Última emisión</td>
+					<th> Temporada</th>
+					<th> Episodios</th>
+					<th> Primera emisión</th>
+					<th> Última emisión</th>
 				</tr>
 				<tr>
 					<td> 1</td>
@@ -70,39 +88,24 @@
 					<td> 10 de junio de 2007</td>
 				</tr>
 			</table>
-		</main>
-	
-		<aside>
-			<nav>
-				<p>Otros apartados:</p>
-				<ul>
-					<li><a href="index.html">Introducción</a></li>
-					<li><a href="argumento.html">Argumento</a></li>
-					<li><a href="concepcion.html">Concepcion</a></li>
-					<li><a href="apertura.html">Apertura</a></li>
-					<li><a href="localizaciones.html">Localizaciones</a></li>
-					<li><a href="personajes_principales.html">Personajes</a></li>
-					<li><a href="premios.html">Premios</a></li>
-					<li><a href="libros.html">Libros</a></li>
-				</ul>
-			</nav>
-		</aside>
-		
-		<footer>
-			<address>
-				<p>
-			Más información:
-				</p>
-				<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
-				<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
-			</address>
-				<a href="https://validator.w3.org/check?uri=referer">
-				<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png"
-				alt=" HTML5 Válido!" height="64" width="63" /></a>
-				<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
-				<img src=" http://jigsaw.w3.org/css-validator/images/vcss"
-				alt="Valid CSS!" height="31" width="88" /></a>
-		</footer>
-		
-	</body>
+		</section>
+	</main>
+	<footer>
+		<address>
+			<p>
+				Más información:
+			</p>
+			<a href="https://es.hboespana.com/series/the-sopranos/103aae84-b40c-4d86-bf79-b9521c06b640">HBO</a><br>
+			<a href="https://www.filmaffinity.com/es/film402150.html">FilmAffinity</a><br>
+
+		</address>
+		<a href="https://validator.w3.org/check?uri=referer">
+			<img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt=" HTML5 Válido!" height="64"
+				width="63" /></a>
+		<a href=" http://jigsaw.w3.org/css-validator/check/referer ">
+			<img src=" http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88" /></a>
+	</footer>
+
+</body>
+
 </html>
